force-app/main/default/objects/UserCreateUpdate__e/UserCreateUpdate__e.object-meta.xml
<CustomObject>
    <label>User Create Update</label>
    <pluralLabel>User Create Update</pluralLabel>
</CustomObject>