force-app/main/default/objects/UserCreateUpdate__e/fields/Email_New__c.field-meta.xml
<CustomField>
    <fullName>Email_New__c</fullName>
    <label>Email New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>