force-app/main/default/objects/UserCreateUpdate__e/fields/Email_Old__c.field-meta.xml
<CustomField>
    <fullName>Email_Old__c</fullName>
    <label>Email Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>