force-app/main/default/objects/UserCreateUpdate__e/fields/FederationId__c.field-meta.xml
<CustomField>
    <fullName>FederationId__c</fullName>
    <label>Federation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>