force-app/main/default/objects/UserCreateUpdate__e/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>